# priya-lifepdf

./: .gitignore  DEPLOYMENT.md  LICENSE  PHARMA_NOTICE.md  README.md  docker-compose.yml  netlify.toml  next.config.js  nginx.conf  package-lock.json  package.json
extension/: README.md  background.js  manifest.json  popup.html
messages/: ar.json  de.json  en.json  es.json  fr.json  id.json  it.json  ja.json  ko.json  pt.json  ro.json  vi.json  zh-TW.json  zh.json
public/: sw.js
scratch/: chinese-details-report.md  chk_4.json  chk_5.json  google-translated.json  mapping.json  merge_chunks.js  pending-all.json  pending-messages-chunk1.json  pending-messages-chunk2.json  pending-messages-chunk3.json  pending-messages-chunk4.json  pending-translations-map.json  rename_brand.py  scan-all-tools.js  summarize-report.js  test-mapping.js  trans_chk_4.json  trans_chk_5.json  translated-messages-chunk1-partA.json  translated-messages-chunk1-partB.json  translated-messages-chunk1-partC.json  translated-messages-chunk1.json  translated-messages-chunk2-partA.json  translated-messages-chunk2-partB.json  translated-messages-chunk2-partC.json  translated-messages-chunk2.json  translated-messages-chunk3-partA.json  translated-messages-chunk3-partB-es.json  translated-messages-chunk3-partB-fr.json  translated-messages-chunk3-partB-it.json  translated-messages-chunk3-partB-pt.json  translated-messages-chunk3-partB.json  translated-messages-chunk3-partC.json  translated-messages-chunk4-partA.json  translated-messages-chunk4-partB.json  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+114 files in other folders)
