[package]
name = "priya-pdf-editor"
version = "0.1.0"
description = "Priya PDF Editor Desktop Application"
authors = ["Priya PDF Editor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
